create select app

--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<div class="wrapper">
+	
+	<h1>React Select Component</h1>
+	<h2>(v 0.0.3)</h2>
+	
+	<p>A select component for React because I was tired of not having full control of my select inputs.  I'm still working on expanding the component so feel free to comment with any ideas that would help flush out the functionality.</p>
+	
+	<div id="app"></div>
+	
+	<p class="Shameless"><a href="https://codepen.io/collection/AxOjWZ/">My Other Material Components</a></p>
+	
+</div>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
-</html>
+<div class="wrapper">
+	
+	<h1>Change Log</h1>
+	
+	<div class="changeLog">
+		
+		<div class="changeLog_entry">
+			
+			<h3 class="entry_heading">0.0.3</h3>
+			
+			<p>Fixed closing issue that kept select open even if you clicked somewhere other than the select.</p>
+			
+		</div>
+		
+		<div class="changeLog_entry">
+			
+			<h3 class="entry_heading">0.0.2</h3>
+			
+			<p>Added label prop to provide material labels and animation</p>
+			
+		</div>
+			
+			<div class="changeLog_entry">
+			
+			<h3 class="entry_heading">0.0.1</h3>
+			
+			<p>Initial release.  Pretty basic, not too much functionality.</p>
+			
+		</div>
+		
+	</div>
+	
+</div>
